--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
   },
+  "optionalDependencies": {
+    "fsevents": "2.1.2"
+  },
   "engines": {
     "node": "12.18.3",
     "npm": "6.14.6"
